# bzl

./: .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  RULES.md  WORKSPACE
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: fix_release_title.yml  main.yml  publish.yaml  release.yml  release_prep.sh  trigger_release.yaml
bzl/: BUILD.bazel
bzl/paths/: BUILD.bazel  paths.bzl  paths_test.bzl
bzl/versions/: BUILD.bazel  versions.bzl  versions_test.bzl
mbo_bzl/: BUILD.bazel  versions.bzl  versions_test.bzl
tools/: trigger_release.sh
