# Copyright 2025 The Helly25 Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""A starlark implementation of versioning functions that mostly follow semver."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":paths_test.bzl", "paths_test_suite")

package(default_visibility = ["//visibility:private"])

bzl_library(
    name = "paths_bzl",
    srcs = ["paths.bzl"],
    visibility = ["//visibility:public"],
)

alias(
    name = "paths",
    actual = "paths_bzl",
    visibility = ["//visibility:public"],
)

paths_test_suite()
